create CompactionGraph for larger-than-memory index builds